camel-quarkus/3.27.x/reference/extensions/langchain4j-embeddings.md
# LangChain4j Embeddings

JVM since3.10.0 Nativeunsupported

LangChain4j Embeddings

## What’s inside

-   [LangChain4j Embeddings component](../../../../components/4.14.x/langchain4j-embeddings-component.md), URI syntax: `langchain4j-embeddings:embeddingId`
    

Please refer to the above link for usage and configuration details.

## Maven coordinates

```xml
<dependency>
    <groupId>org.apache.camel.quarkus</groupId>
    <artifactId>camel-quarkus-langchain4j-embeddings</artifactId>
</dependency>
```

Check the [User guide](../../user-guide/index.md) for more information about writing Camel Quarkus applications.

## LangChain4j dependency management

In order to ensure alignment across all Quarkus and LangChain4j related dependencies, it is recommended to import the LangChain4j BOM as below:

```xml
<dependencyManagement>
  <dependencies>
    <dependency>
      <groupId>dev.langchain4j</groupId>
      <artifactId>langchain4j-bom</artifactId>
      <version>1.5.0</version>
      <type>pom</type>
      <scope>import</scope>
    </dependency>
  </dependencies>
  ...
</dependencyManagement>
```

Note that the import order is paramount when using maven `dependencyManagement`. As such, one might need to import the `langchain4j-bom` before other related Camel and Quarkus BOMs.